welcome.lessons.welcome.array.notriples.NoTriples.scala.error
noTriples:6: error: ')' expected but ';' found.
			if ((nums(i) == nums(i+1)) && (nums(i) == nums (i+2)) flag = false;
                                                                                          ^